--- a/index.css
+++ b/index.css
@@ -6,10 +6,19 @@ body {
   cursor: pointer;
 }
 
-h1 {
+body {
   color: #34495e;
 }
 
 .clicked {
   color: #7f8c8d;
+}
+
+.form,
+.greetings {
+  display: none;
+}
+
+.showing {
+  display: block;
 }
